# RailFi

./: .gitignore  ARCHITECTURE.md  README.md
contract/: .gitignore  Anchor.toml  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  package.json  tsconfig.json
contract/.github/: PULL_REQUEST_TEMPLATE.md
contract/.github/workflows/: ci.yml  deploy-devnet.yml
contract/programs/railpay-contract/: Cargo.toml
contract/programs/railpay-contract/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
contract/programs/railpay-contract/src/instructions/: admin_reset_circuit_breaker.rs  initialize_circuit_breaker.rs  initialize_referral.rs  migrate_protocol_config.rs  mod.rs  request_offramp.rs  set_kamino_enabled.rs  set_oracle_max_age.rs  update_circuit_breaker_config.rs
contract/scripts/: create-merkle-tree.ts  initialize-circuit-breaker.ts  initialize-protocol.ts  initialize-treasury.ts  mint-devnet-usdc.ts  smoke-test-devnet.ts  smoke-test-mainnet.ts  update-oracle-age.ts
contract/tests/: circuit_breaker.ts  integration_offramp.ts  pyth_oracle.ts
frontend/: .gitignore  CHANGELOG.md  GRANT_REVIEWER_GUIDE.md  README.md  SECURITY.md  auth.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/.github/: PULL_REQUEST_TEMPLATE.md
frontend/.github/workflows/: ci.yml
frontend/prisma/: schema.prisma
frontend/scripts/: fund-compression-wallet.ts  setup-helius-webhook.ts  test-cashfree-lifecycle.ts  verify-routing.ts
frontend/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: CircuitBreakerStatus.tsx  ClientWalletMultiButton.tsx  CreateInvoiceModal.tsx  InvoiceHistory.tsx  KycGate.tsx  PayInvoiceClient.tsx  ProgramIdBadge.tsx  ReferralDashboard.tsx  Skeleton.tsx  TaxExportButton.tsx  Toast.tsx  WalletDashboard.tsx  WalletIntelligencePanel.tsx  WalletSessionProvider.tsx  YieldBenchmarkClient.tsx
frontend/src/hooks/: useCountUp.ts  useDebounce.ts  useHistory.ts  useHybridAuth.ts  useMinimumLoading.ts  useRailpay.ts  useRailpayActions.ts  useRailpayBalances.ts  useRailpayProtocol.ts  useRailpayVault.ts  useToast.ts  useUsdInrReference.ts
frontend/src/idl/: railpay.json
frontend/src/lib/: analytics.ts  atomic-operations.ts  auth.ts  cashfree-webhook-processor.ts  cashfree-webhooks.ts  db.ts  demo-store.ts  dodo-audit.ts  dodo-intents.ts  dodo.ts  fetch-with-timeout.ts  fxrate.ts  helius-das.ts  helius.ts  internal-auth.ts  invoice-auth-server.ts  invoice-auth.ts  invoice-store.ts  light-rpc.ts  offramp-reader.ts  offramp-store.ts  origin.ts  payout-attempts.ts  public-env.ts  pyth.ts  qstash.ts  rate-limit.ts  reconciliation.ts  redis-lock.ts  redis.ts  referrals.ts  security.ts  server-env.ts  siws.ts  solana.ts  sumsub.ts  upi.ts  upstash.ts  utils.ts  wallet-session-server.ts  (+4 more)
frontend/src/providers/: RailpayProvider.tsx
frontend/types/: next-auth.d.ts
(+94 files in other folders)
